Fixing deployment issuses

--- a/content/post/2020-05-10-GV-ADR2702.md
+++ b/content/post/2020-05-10-GV-ADR2702.md
@@ -40,11 +40,12 @@ Just unzip and go!
 
 ![Firmware](/img/firmware.png)
 **Contents of A02-GV-ADR2702_V1.01_2019-05-16.zip**
+
 * **uimage.bin** - uImage Header (ARM) Linux Boot Executable (ARM)
-* **program.bin**  - Squashfs File System
-* **VERSION**   - MD5 Integrity Check 
-* **verinfo.var** - MD5 Integrity Check  
-* **VERSION_uboot** - MD5 Integrity Check 
+- **program.bin**  - Squashfs File System
+- **VERSION**   - MD5 Integrity Check 
+- **verinfo.var** - MD5 Integrity Check  
+- **VERSION_uboot** - MD5 Integrity Check 
 
 #### File System
 ![Squashfs](/img/Squashfs.png)
@@ -64,12 +65,12 @@ These were immediately recognized as DEScrypt hashes, thrown into John the Rippe
 ![cracked](/img/cracked.png)
 #### Code Analysis
 I also performed code analysis on the files within the file system. There were three notable types of files within the system: javascript files, configuration files, and bash scripts. After analyzing all of those files, I found several important files. 
-* **userinfo_edit.0882672b.js** - javascript file that handles password changes and writing the changes to the configuration files.
-* **default_cfg_UNIPC-C.xml** -​ contains the default credentials and settings for the device.
+-  **userinfo_edit.0882672b.js** - javascript file that handles password changes and writing the changes to the configuration files.
+-  **default_cfg_UNIPC-C.xml** -​ contains the default credentials and settings for the device.
 
-* **config_a.xml** - hold password and setting changes made to the device by the user
-* **config_b.xml** - hold password and setting changes made to the device by the user
-* **resetconfig** - shell script that changes the device back to the default settings
+-  **config_a.xml** - hold password and setting changes made to the device by the user
+- **config_b.xml** - hold password and setting changes made to the device by the user
+- **resetconfig** - shell script that changes the device back to the default settings
 
  ### Device Analysis
 ![Portscan](/img/portscan-gv.png)
